@@ -1,15 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX sdl-jewels-1.1.1-Makefile.patch 488 RMD160 628fb6d18083bbd61026067ad1f0d62be42094d3 SHA1 7674a30b3c080badba492606975225ec88cbdba6 SHA256 8a5f03da4997d663b488818896b500f8351ddb285d038c198feb6851c83b44d8
-DIST SDL_jewels-1.1.1.tgz 195366 RMD160 ec3607b188388409963fcccc5c0511d18e6f9079 SHA1 fbf7cc13b3a727a8c9815976fac598ba8e31c3a9 SHA256 c9a40b7e18fabb03e4065e656bc2c30f595103bf20dc74a10847c3f3aa138ee7
-EBUILD sdl-jewels-1.1.1.ebuild 1111 RMD160 c2b57fcd090ddd6b80526fcd154cb562e068c179 SHA1 97edd193673799b2331a407aed7efd2b45b65681 SHA256 8ee88f06655a53efd88d02609ff650845b66d96baa1ab507215f4f1167623b22
-MISC ChangeLog 673 RMD160 af9126fc16eea8fd3259aef7a1a01e827f8bc020 SHA1 3f8395c67ce7253aeed4c483f7ac4354ff89135a SHA256 07fdedb94ca799e0495c233c946c462e00ebb8631b0ecdbc36a68466b0bebb1c
-MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
+AUX sdl-jewels-1.1.1-Makefile.patch 488 SHA256 8a5f03da4997d663b488818896b500f8351ddb285d038c198feb6851c83b44d8 SHA512 9d83dea588f699ef09f89ed320bece1bb001ee0a1bfa4d3e4d4b8c679af9b2028d535469c078f387564b37a16ee0e76f3e9cf20a4248784bf322ac902aa03f26 WHIRLPOOL 98e8f77ccbd9741bb9bfe28d31ac3fa2af4e6c4234724e350acb25e26dd0e6a21b426c4ef8f6d94d187b585f46fa8c8bbdc507fe70263605ad32dacb29a354b9
+DIST SDL_jewels-1.1.1.tgz 195366 SHA256 c9a40b7e18fabb03e4065e656bc2c30f595103bf20dc74a10847c3f3aa138ee7 SHA512 720f1d89384bf267e8f5441efd70fcf94bfc89ddbd0ff90b1dafc6381e83e005281fcde256ee4cd0645f2832cf9c22aed487c105d7d9cf39711c5752e12763c4 WHIRLPOOL 8ce6f3409a50a2ff673e545f1333f7f12d6b37bd6020f22d004072d0266be3936e98e0212925457f5ede4adb7e0f2346bc5c8a00b3c8e74b3f4b61cb397f78f1
+EBUILD sdl-jewels-1.1.1.ebuild 1117 SHA256 0ad84c9e5d98f0ff343d36b096a2b14014d353eb6a705d936f2fef3cab6ad89d SHA512 cccd51c9b30c368474299a0412e4823613050bcef14712cb7ccdd5f838fb9ced44d52049b28f464b8cdfe7ed683170dbc1f8248182928717659a0d2add7e17c4 WHIRLPOOL de159ff487ce3083718cb7de5034959060f576538fbbeaf4afb38bb3b63f703514da1db5b633568a4bbad10e631e07e35e1d9eade866bd5c51eeaedeed2e667e
+MISC ChangeLog 758 SHA256 ad30ef6fe26b8700beedbb1a8dc58f4bfdf40f2c4c06f5816997e099b64ecdf3 SHA512 c3de28c806595017f73bec6e7e08be1f68159e8828718b1949889c48ade0373d4a09002d174e8249b33b64f0c32913a83a7c17f971ef515f640f4dccab7fc0cc WHIRLPOOL b3a09cb46cecacf36634d9f6e29ef2eef4a17461e4db1869e4cc006fe44deacc9009b66d1d0f3d627466d489e7128a3eae57255ecc7ac14c9daf6fb0658b4b99
+MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEARECAAYFAk0xsjIACgkQkKaRLQcq0GL3gQCgroZ0fT4FKmetKUj0vb4lxotY
-rakAoIywDNf+txC4+BggJPEGn+B9Gxew
-=XLKg
+iEYEAREIAAYFAlTtwMkACgkQIY77eQFFFC2XkACfZcmXBkU5l09VpNLqO+2hqExV
+3ZIAn2MHYH3AYl98D0oNWA3XAYWEcts0
+=QE8+
 -----END PGP SIGNATURE-----
